--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ nohupFilePath=/home/wasadmin/dispatcher/
 nohupFileName=nohup
 pjFilePath=/home/wasadmin/logs/pjmodels/
 pjFileName=pjmodels
+sasFilePath=/data/SASConfig/Lev1/SASApp/BatchServer/Logs
+sasFileName=sas
 #server.servlet.context-path=retransmission
 #mysql¡¥Ω”≈‰÷√
 #spring.datasource.url=jdbc:mysql://localhost:3306/mytest
