--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.intellij</groupId>-->
+<!--            <artifactId>annotations</artifactId>-->
+<!--            <version>18.0.0</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
